--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
       <li><a href="01-gallery.html">Image gallery</a></li>
       <li><a href="02-lightbox.html">SimpleLightbox library</a></li>
+      <li><a href="03-practice.html">My practice</a></li>
     </ul>
   </body>
 </html>
